# llvm-mos-sdk

mos-platform/: CMakeLists.txt
mos-platform/kim1/: CMakeLists.txt  clang.cfg  kim1.h  kim1.inc  link.ld  reset.s  scandisplay.c
